feat: Add /signatures endpoint
